Fixing a bug (#16415) where long filenames in file manager would expand table cells and move all other cells and controls off screen

--- a/themes/cp_themes/default/css/global.css
+++ b/themes/cp_themes/default/css/global.css
@@ -3471,6 +3471,18 @@ div.contentWrap {
 	margin-top: 3px;
 }
 
+/* Fix for long file names */
+#file_manager .mainTable td,
+#file_chooser_body #tableView td {
+	max-width: 200px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
+#file_chooser_body .mainTable td {
+	max-width: 500px;
+}
+
 a.file_chooser_thumbnail:link,
 a.file_chooser_thumbnail:visited {
 	border:				1px solid #ddd;
